--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod --base-href \"/angular-ct-paper-dash/\" && angular-cli-ghpages"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +40,7 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "2.5.53",
     "@types/node": "~6.0.60",
+    "angular-cli-ghpages": "^0.5.1",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
